# GluonEngine

./: CMakeLists.txt  GluonEngine.sln  README.md
GluonEngine/: GluonEngine.vcxproj  GluonEngine.vcxproj.filters  TestGame.cpp  TestLayer.cpp  TestLayer.h  TestLayer2D.cpp  TestLayer2D.h  main.cpp
GluonEngine/Resources/Shaders/Basic/: fragment.glsl  vertex.glsl
GluonEngine/src/: Bundles.h  Common.h  Game.cpp  Game.h  Layer.h  Scene.h  Timer.h
GluonEngine/src/Entity/: ComponentIds.h  Entity.cpp  Entity.h  EntityComponent.h  IdAssigner.h  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  RenderComponent.cpp  RenderComponent.h  SpinningComponent.cpp  SpinningComponent.h
GluonEngine/src/Files/: FileUtils.cpp  FileUtils.h
GluonEngine/src/Graphics/: BufferedRenderer.cpp  BufferedRenderer.h  Camera.h  Common.h  FPSCamera.cpp  FPSCamera.h  IndexedModel.h  Mesh.cpp  Mesh.h  OpenGLRenderDevice.cpp  OpenGLRenderDevice.h  OrthographicCamera.h  RenderContext.cpp  RenderContext.h  RenderDevice.h  RenderTarget.cpp  RenderTarget.h  Renderable.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.h  Window.cpp  Window.h
GluonEngine/src/Input/: InputManager.cpp  InputManager.h  InputStatus.cpp  InputStatus.h  KeyboardInputManager.cpp  KeyboardInputManager.h  Keys.h
GluonEngine/src/Lib/: stb_image.h
Resources/Shaders/Basic/: fragment.glsl  vertex.glsl
